apps/observability-webc/monitoring-opensearch.http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-dashboards
spec:
  parentRefs:
    - name: wac-hospital-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /monitoring
      backendRefs:
        - group: ""
          kind: Service
          name: monitoring-dashboards
          port: 80
